# fe6502

./: Cargo.toml  hello.prg  run.sh  test.prg  test2.prg  test3.prg  test4.prg
src/: addressing.rs  console_colors.rs  debug.rs  instructions.rs  main.rs  opcodes.rs  program.rs
