[package]
name = "fe6502"
version = "0.1.0"
authors = ["Diane Sparks <fractaldiane@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#fltk = "0.13.13"
byteorder = "1"
num = "0.2"
num-derive = "0.3"
num-traits = "0.2"
lazy_static = "1.4.0"
strum_macros = "0.20.0"
